# BlimpCore

./: .gitignore  README.md
ESP32_Battery_Monitor/: platformio.ini
ESP32_Battery_Monitor/src/: main.cpp
SPI_IMU/: imuSPI.h  imuSPI.ino
Test_Bench/Gate_Testing/: Servo.cpp  copyCodeToPi.sh  main.cpp  makefile  math_helpers.hpp
Test_Bench/Hardware_Option_Testing/: copyCodeToPi.sh  main.cpp
Test_Bench/OPi_IMU/: main.cpp  makefile
Test_Bench/Test_Sequence/: Gimbal.cpp  brushless.cpp  main.cpp
Test_Bench/Thurst_testing/: main.cpp
Test_Bench/uart/: TOF_Sense.c  TOF_Sense.h  copyCodeToPi.sh  main.c  makefile
Test_Bench/uart_copy/: TOF_Sense.hpp  copyCodeToPi.sh  main.cpp  makefile  test
ros2_ws/src/blimp_imu_calibration/: CMakeLists.txt  README.md  copyCodeToPi.sh  package.xml
ros2_ws/src/blimp_imu_calibration/include/: AccelerometerCalibrator.hpp  AccelerometerCalibratorNew.hpp  AccelerometerCalibratorOld.hpp
ros2_ws/src/blimp_imu_calibration/src/: AccelerometerCalibrator.cpp  AccelerometerCalibratorNew.cpp  AccelerometerCalibratorOld.cpp  AccelerometerCalibratorOldOld.cpp  main.cpp
ros2_ws/src/catching_blimp/: CMakeLists.txt  bulkCopyCodeToPi.sh  bulkStartAllServices.sh  bulkStartAutonomyService.sh  bulkStartServices.sh  bulkStartVisionService.sh  bulkStopAllServices.sh  bulkStopAutonomyService.sh  bulkStopServices.sh  bulkStopVisionService.sh  copyCodeToPi.sh  copyCompileCodeToPi.sh  package.xml  startAllServices.sh  startAutonomyService.sh  startServices.sh  startVisionService.sh  stopAllServices.sh  stopAutonomyService.sh  stopServices.sh  stopVisionService.sh
ros2_ws/src/catching_blimp/calibration/: SillyAh_accel_cal.yaml
ros2_ws/src/catching_blimp/include/: BangBang.hpp  Brushless.hpp  CatchingBlimp.hpp  Gimbal.hpp  Madgwick_Filter.hpp  MotorControl.hpp  MotorControl_V2.hpp  OPI_IMU.hpp  Optical_Flow.hpp  PID.hpp  Servo.hpp  TOF_Sense.hpp  ZEstimator.hpp  optical_ekf.hpp  tripleBallGrabber.hpp
ros2_ws/src/catching_blimp/launch/: 1_BurnCream.launch.py  2_SillyAh.launch.py  3_Turbo.launch.py  4_GameChamber.launch.py  5_GravyLongWay.launch.py  6_SuperBeef.launch.py  GameChamber.launch.py  SuperBeef.launch.py  Turbo.launch.py  catchingblimp.launch.py
ros2_ws/src/catching_blimp/param/: pid_config.yaml
ros2_ws/src/catching_blimp/scripts/: battery_monitor_node.py
ros2_ws/src/catching_blimp/src/: AccelGCorrection.cpp  BangBang.cpp  Brushless.cpp  CatchingBlimp.cpp  CatchingBlimpStateMachine.cpp  EMAFilter.cpp  Gimbal.cpp  Kalman_Filter_Tran_Vel_Est.cpp  Madgwick_Filter.cpp  MotorControl.cpp  MotorControl_V2.cpp  OPI_IMU.cpp  PID.cpp  ServoWrapper.cpp  TOF_Sense.cpp  ZEstimator.cpp  baro_acc_kf.cpp  blimp.cpp  brushless.cpp  catching_blimp_node.cpp  gyro_ekf.cpp  math_helpers.cpp  servo.cpp  tripleBallGrabber.cpp
ros2_ws/src/catching_blimp/zestimate/: metadata.yaml  zestimate_0.db3
ros2_ws/src/cpp_pubsub/: copyCodeToPi.sh
ros2_ws/src/imu_test/: CMakeLists.txt  copyCodeToPi.sh  package.xml
ros2_ws/src/imu_test/calibration/: Turbo_accel_cal.yaml
ros2_ws/src/imu_test/include/: EMAFilter.hpp  IMUTest.hpp  Madgwick_Filter.hpp  OPI_IMU.hpp  ZEstimator.hpp
ros2_ws/src/imu_test/launch/: test.launch.py
ros2_ws/src/imu_test/src/: IMUTest.cpp  Madgwick_Filter.cpp  OPI_IMU.cpp  ZEstimator.cpp  imu_test_node.cpp
ros2_ws/src/ros2_blimp/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_blimp/calibration/: BurnCream.yaml  GravyLongWay_accel_cal.yaml  SillyAh_accel_cal.yaml
ros2_ws/src/ros2_blimp/include/: AccelGCorrection.hpp  CatchingBlimp.hpp  Gimbal.hpp  Madgwick_Filter.hpp  OPI_IMU.hpp  PID.hpp  ServoWrapper.hpp  ZEstimator.hpp  baro_acc_kf.hpp  brushless.hpp  gyro_ekf.hpp  servo.hpp  tripleBallGrabber.hpp
ros2_ws/src/ros2_blimp/launch/: 1_BurnCream.launch.py  2_SillyAh.launch.py  5_GravyLongWay.launch.py  BurnCream.launch.py  GravyLongWay.launch.py  SillyAh.launch.py  SuperBeef.launch.py  Turbo.launch.py
ros2_ws/src/ros2_blimp/param/: pid_config.yaml
ros2_ws/src/ros2_blimp/src/: Brushless.cpp  CatchingBlimp.cpp  Gimbal.cpp  Gimbal.h  Madgwick_Filter.cpp  MotorControl.cpp  OPI_IMU.cpp  Optical_Flow.cpp  PID.cpp  PID.h  Servo.cpp  ZEstimator.cpp  baro_acc_kf.cpp  blimp.cpp  brushless.cpp  catching_blimp_node.cpp  optical_ekf.cpp  servo.cpp  tripleBallGrabber.cpp
